# mavish

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  vcpkg.json
resources/: README.md
resources/shaders/: moebius.fs  water.fs  water.vs
src/: main.cpp  shader_test.cpp
